fixed button click issue in game where buttons had to be clicked twice. fixed blitting issues. added close button on results screen. added start button on splash screen to force a block for loading spritesheet.

--- a/fb_sec_game/index.html
+++ b/fb_sec_game/index.html
@@ -7,9 +7,9 @@
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 
 
-    <script type="text/javascript" src="js/fb_sec_game.js"></script>
-    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/compiled/fb_sec_game.js"></script>
+    <script type="text/javascript" src="js/jquery/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript">
 
     </script>
