--- a/fb_sec_game/index.html
+++ b/fb_sec_game/index.html
@@ -25,7 +25,7 @@
         <div class="modal-body" id="myModalBody">
         </div>
         <div class="modal-footer">
-            <a href="#" class="btn" onclick="fb_sec_game.restart();" data-dismiss="modal">Restart</a>
+            <a href="#" class="btn btn-inverse" onclick="fb_sec_game.restart();" data-dismiss="modal">Restart</a>
             <a href="#" onclick="fb_sec_game.acceptPermissionSettings();" class="btn btn-primary">Save Preferences</a>
         </div>
     </div>
