--- a/fb_sec_game/index.html
+++ b/fb_sec_game/index.html
@@ -5,18 +5,18 @@
 	<title>Facebook Security Game Plugin</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-
-
-    <script type="text/javascript" src="js/compiled/fb_sec_game.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
-    <script type="text/javascript">
-
-    </script>
+    <style>
+        body {
+            min-width:662px;
+            min-height: 560px;
+            overflow-x:hidden;
+            overflow-y:hidden;
+        }
+    </style>
 
 </head>
 
-<body class="container span12" onload="startgame()">
+<body class="container span12">
 
     <div class="modal hide fade" id="myModal">
         <div class="modal-header">
@@ -25,35 +25,18 @@
         <div class="modal-body" id="myModalBody">
         </div>
         <div class="modal-footer">
-            <a href="#" class="btn btn-inverse" onclick="fb_sec_game.restart();" data-dismiss="modal">Restart</a>
-            <a href="#" onclick="fb_sec_game.acceptPermissionSettings();" class="btn btn-primary">Save Preferences</a>
+            <a href="#" id="restartButton" class="btn btn-inverse" data-dismiss="modal">Restart</a>
+            <a href="#" id="acceptButton" class="btn btn-primary">Save Preferences</a>
         </div>
     </div>
 
 </body>
 
-<script type="text/javascript">
-    function startgame(){
-        fb_sec_game.play(testData());
-    };
-
-    function testData(){
-        return {"app_name": "Test App",
-                "app_img": null,
-            "data": [{"pid": "p1", "pname": "Permission 1", "p_lvl": 5, "p_img": null, "p_desc": "This is a description for Permission 1. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p2", "pname": "Permission 2", "p_lvl": 50, "p_img": null, "p_desc": "This is a description for Permission 2. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p3", "pname": "Permission 3", "p_lvl": 5, "p_img": null, "p_desc": "This is a description for Permission 3. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p4", "pname": "Permission 4", "p_lvl": 50, "p_img": null, "p_desc": "This is a description for Permission 4. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p5", "pname": "Permission 5", "p_lvl": 5, "p_img": null, "p_desc": "This is a description for Permission 5. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p6", "pname": "Permission 6", "p_lvl": 50, "p_img": null, "p_desc": "This is a description for Permission 6. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."},
-                {"pid": "p7", "pname": "Permission 7", "p_lvl": 90, "p_img": null, "p_desc": "This is a description for Permission 7. Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch."}]};
-    };
-
-    function updatePermissionsWithUserSelection(obj){
-        console.log(obj);
-    };
-
-</script>
+<script type="text/javascript" src="js/compiled/fb_sec_game.js"></script>
+<script type="text/javascript" src="js/jquery/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript" src="test.js"></script>
+<script type="text/javascript" src="js/entry.js"></script>
 
 
 </html>
