overhaul with images.

--- a/fb_sec_game/index.html
+++ b/fb_sec_game/index.html
@@ -18,6 +18,10 @@
 
 <body class="container span12">
 
+    <div hidden="hidden">
+        <img src="img/spritesheet.png" /> 
+    </div>
+
     <div class="modal hide fade" id="myModal">
         <div class="modal-header">
             <h3>Game Results</h3>
